# Paddle-Litev2.11

./: CMakeLists.txt  compilelog  compilelogfpga  compilelogrv64withoutbackend  compilelogx64  compilelogx86  compileuntestlogx64  log  runfpgalog  runlogfpga  runlogx86
cmake/: configure.cmake  flags.cmake  functions.cmake  generic.cmake  lite.cmake  postproject.cmake
cmake/backends/: common.cmake  x86.cmake
cmake/os/: common.cmake  riscv64linux.cmake
lite/: CMakeLists.txt
lite/api/: cxx_api.cc  cxx_api_impl.cc  light_api.cc  light_api.h  light_api_impl.cc  paddle_api.cc  paddle_api.h  paddle_place.h  paddle_use_passes.h
lite/api/tools/: model_test.cc
lite/backends/fpga/: CMakeLists.txt  monitor.hpp
lite/backends/riscv/: CMakeLists.txt
lite/backends/x86/: CMakeLists.txt
lite/backends/x86/jit/more/: CMakeLists.txt
lite/core/: context.h  memory.cc  op_lite.cc  op_lite.h  program.cc  program.h
lite/core/optimizer/: optimizer.cc  optimizer.h
lite/ddemo/: test_vector.cc
lite/ddemo/subject/: subject15.cc
lite/kernels/: CMakeLists.txt
lite/kernels/arm/: CMakeLists.txt
lite/kernels/bm/: CMakeLists.txt
lite/kernels/cuda/: CMakeLists.txt
lite/kernels/fpga/: CMakeLists.txt  batch_norm_compute.cc  calib_compute.cc  cast_compute.cc  conv_compute.cc  (+18 more)
lite/kernels/fpga copy/: CMakeLists.txt
lite/model_parser/: model_parser.cc
lite/operators/: __fpga__conv_op.cc  argmax_op.cc
lite/tools/: build_fpga.sh  build_linux.sh
lite/utils/: CMakeLists.txt  any.h
tmpfile/: ._MobileNetV1
tmpfile/MobileNetV1/: inference.pdiparams.info  inference.pdmodel
(+55 files in other folders)
